Compiled version of changes.